--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
     "version": "0.0.1",
     "main": "index.js",
     "scripts": {
-        "start": "webpack-dev-server --open",
-        "build": "webpack"
+        "start": "./node_modules/.bin/webpack-dev-server --open",
+        "build": "./node_modules/.bin/webpack"
     },
     "dependencies": {
         "excalibur": "latest"
